--- a/src/components/ColorCard.module.css
+++ b/src/components/ColorCard.module.css
@@ -31,7 +31,13 @@
 }
 
 .colorCard {
-
   padding: 20px;
   border-radius: 5%;
+  cursor: pointer;
+}
+
+.colorNotif {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
 }
