--- a/src/components/ColorCard.module.css
+++ b/src/components/ColorCard.module.css
@@ -19,6 +19,7 @@
 .colorHex {
   font-family: 'DM Mono', monospace;
   font-weight: medium;
+  font-size: 2em;
   text-transform: uppercase;
   text-align: center
 }
@@ -26,6 +27,14 @@
 .colorName {
   font-family: 'Nunito', sans-serif;
   font-weight: 600;
+  font-size: 1.2em;
+  text-transform: capitalize;
+  text-align: center
+}
+.colorNotifText {
+  font-family: 'Nunito', sans-serif;
+  font-weight: 600;
+  font-size: 2em;
   text-transform: capitalize;
   text-align: center
 }
@@ -40,4 +49,9 @@
   width: 100%;
   height: 100%;
   padding: 20px;
+}
+
+.cardWraper {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
